AC_INIT
AC_PROG_CC
# temporarily override this macro
m4_pushdef([_AS_ECHO_UNQUOTED([$as_me:${as_lineno-$LINENO}: result: ],[AS_MESSAGE_LOG_FD])
_AS_ECHO_UNQUOTED([])], [:])
AC_C_BIGENDIAN
m4_popdef([_AS_ECHO_UNQUOTED([$as_me:${as_lineno-$LINENO}: result: ],[AS_MESSAGE_LOG_FD])
_AS_ECHO_UNQUOTED([])])
AC_OUTPUT
